--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "kubernetes (>=32.0.1,<33.0.0)",
     "pg8000 (>=1.31.2,<2.0.0)",
     "kafka-python (>=2.1.5,<3.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "asyncio (>=3.4.3,<4.0.0)",
 ]
 
 [tool.poetry]
