--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pg8000 (>=1.31.2,<2.0.0)",
     "kafka-python (>=2.1.5,<3.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
+    "stripe (>=12.1.0,<13.0.0)",
 ]
 
 [tool.poetry]
