--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "confluent-kafka (>=2.10.0,<3.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "pydantic (>=2.11.4,<3.0.0)",
+    "stripe (>=12.1.0,<13.0.0)",
 ]
 
 [tool.poetry]
