--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "kafka-python (>=2.1.5,<3.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "phonenumbers (>=9.0.4,<10.0.0)",
+    "babel (>=2.17.0,<3.0.0)",
 ]
 
 [tool.poetry]
