--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ dependencies = [
 [tool.poetry]
 package-mode = false
 
+[tool.poetry.dependencies]
+google-auth = "^2.0.0"
+google-auth-oauthlib = "^1.0.0"
+
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
 ruff = "^0.11.2"
