--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ dependencies = [
     "sqlalchemy-utils (>=0.41.2,<0.42.0)",
     "kubernetes (>=32.0.1,<33.0.0)",
     "pg8000 (>=1.31.2,<2.0.0)",
-    "kafka-python (>=2.1.5,<3.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "phonenumbers (>=9.0.4,<10.0.0)",
     "babel (>=2.17.0,<3.0.0)",
@@ -27,6 +26,7 @@ dependencies = [
     "urllib3 (>=2.4.0,<3.0.0)",
     "confluent-kafka (>=2.10.0,<3.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
+    "pydantic (>=2.11.4,<3.0.0)",
 ]
 
 [tool.poetry]
@@ -46,6 +46,7 @@ build-backend = "poetry.core.masonry.api"
 
 # external tools
 [tool.mypy]
+plugins = ["pydantic.mypy"]
 exclude = [".venv", "tests"]
 disallow_untyped_defs = true
 disallow_any_unimported = true
