--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "asyncpg (>=0.30.0,<0.31.0)",
     "phonenumbers (>=9.0.4,<10.0.0)",
     "babel (>=2.17.0,<3.0.0)",
+    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
 ]
 
 [tool.poetry]
@@ -38,6 +39,7 @@ mypy = "^1.15.0"
 kubernetes-stubs = "^22.6.0.post1"
 types-sqlalchemy-utils = "^1.1.0"
 pytest-cov = "^6.1.1"
+
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
