--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,15 @@ dependencies = [
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "pydantic (>=2.11.4,<3.0.0)",
     "stripe (>=12.1.0,<13.0.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)",
+    "mysql-connector-python (>=9.3.0,<10.0.0)",
+    "requests (>=2.32.3,<3.0.0)",
+    "uvicorn (>=0.34.2,<0.35.0)",
+    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
+    "authlib (>=1.6.0,<2.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "itsdangerous (>=2.2.0,<3.0.0)",
+    "python-decouple (>=3.8,<4.0)",
 ]
 
 [tool.poetry]
