--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ dependencies = [
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "pydantic (>=2.11.4,<3.0.0)",
     "stripe (>=12.1.0,<13.0.0)",
+    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
+    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
+    "types-python-jose (>=3.5.0.20250531,<4.0.0.0)",
 ]
 
 [tool.poetry]
